--- a/package.json
+++ b/package.json
@@ -30,24 +30,24 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.9.1",
-    "@builder.io/qwik-city": "^1.9.1",
+    "@builder.io/qwik": "1.9.1",
+    "@builder.io/qwik-city": "1.9.1",
     "@types/bun": "*",
     "@types/eslint": "8.56.10",
     "@types/node": "20.14.11",
     "@typescript-eslint/eslint-plugin": "7.16.1",
     "@typescript-eslint/parser": "7.16.1",
     "eslint": "8.57.0",
-    "eslint-plugin-qwik": "^1.9.1",
+    "eslint-plugin-qwik": "1.9.1",
     "prettier": "3.3.3",
     "typescript": "5.4.5",
     "undici": "*",
     "vite": "5.3.5",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "4.2.1"
   },
   "dependencies": {
-    "@effect/schema": "^0.75.5",
-    "@fontsource-variable/rubik": "^5.1.0",
-    "effect": "^3.10.13"
+    "@effect/schema": "0.75.5",
+    "@fontsource-variable/rubik": "5.1.0",
+    "effect": "3.10.13"
   }
 }
